# envarly

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml  security.yml  storybook.yml  test.yml
.storybook/: main.ts  preview.css  preview.ts
docs/: distribution.md
lp/: astro.config.mjs  package-lock.json  package.json
lp/src/components/: LandingPage.astro
lp/src/layouts/: Base.astro
lp/src/lib/: lpContent.ts
lp/src/pages/: index.astro  og-image.png.ts  robots.txt.ts
public/: theme-init.js
scoop/: envarly.json
scripts/: biome-to-junit.mjs  check-version.mjs  clippy-to-junit.mjs  gen-licenses.mjs  nextest-fix-junit.mjs  normalize-junit.mjs  normalize-junit.test.mjs  remove-corner-bg.ps1  sync-version.mjs  tauri.mjs
src/: App.css  App.tsx  api.test.ts  api.ts  i18n.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.config/: nextest.toml
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer_hooks.nsh
src-tauri/src/: cli.rs  commands.rs  crypto.rs  env_backend.rs  env_store.rs  error.rs  export.rs  lib.rs  main.rs  model.rs  path_backend.rs  path_manage.rs  snapshot.rs
src-tauri/src/commands/: env.rs  export.rs  launch.rs  mod.rs  path.rs  snapshot.rs  update.rs
src-tauri/src/export/: ansible.rs  dsc.rs  json.rs  mod.rs  powershell.rs  reg.rs
src-tauri/wix/: main.wxs  path_cleanup.wxs  ui_text_white.wxs
src/assets/: oss-licenses.json
src/components/: DetailPanel.tsx  PathEditor.tsx  Sidebar.tsx  SnapshotPanel.tsx
src/context/: ThemeContext.tsx
src/contexts/: UndoContext.tsx
src/demo/: createDemoApi.ts  envarly-demo.json
src/hooks/: stagingLogic.ts  useAppInit.test.ts  useAppInit.ts  useApplyStaged.test.ts  useApplyStaged.ts  useDiagnostics.ts  useDiff.test.ts  useDiff.ts  useEnvVars.test.ts  useEnvVars.ts  useI18n.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useLocalHistory.test.ts  useLocalHistory.ts  useLocalUndo.test.ts  useLocalUndo.ts  usePathStatus.ts  usePresence.ts  useReducedMotion.ts  useStaged.test.ts  useStaged.ts  useStagingHandlers.test.ts  useStagingHandlers.ts  useTheme.test.ts  useTheme.ts  useUndoStack.test.ts  useUndoStack.ts  useUpdateCheck.test.ts  useUpdateCheck.ts
src/lib/: diff.test.ts  diff.ts  envDescriptions.test.ts  envDescriptions.ts  envValueKind.ts  environmentDiagnostics.test.ts  environmentDiagnostics.ts  lint.test.ts  lint.ts  secrets.test.ts  secrets.ts  stagedToDiff.ts
src/locales/: en.json  ja.json
src/stories/: Colors.stories.tsx  Spacing.stories.tsx  Typography.stories.tsx
src/test/: setup.ts
(+100 files in other folders)
